--- a/location-management-api/pom.xml
+++ b/location-management-api/pom.xml
@@ -4,12 +4,14 @@
 	<parent>
 		<groupId>com.ihs</groupId>
 		<artifactId>location-management</artifactId>
-		<version>1.0.0a</version>
+		<version>2.0.0</version>
 	</parent>
+	
 	<artifactId>location-management-api</artifactId>
 	<packaging>jar</packaging>
 	<name>Location Module API</name>
 	<description>API project for Location</description>
+	
 	<dependencies>
 		<!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
 		<dependency>
