--- a/location-management-web/pom.xml
+++ b/location-management-web/pom.xml
@@ -5,13 +5,18 @@
   <parent>
     <groupId>com.ihs</groupId>
     <artifactId>location-management</artifactId>
-    <version>1.0.0a</version>
+    <version>2.0.0</version>
   </parent>
   <artifactId>location-management-web</artifactId>
   <packaging>war</packaging>
-  <name>location-management-web Maven Webapp</name>
+  <name>Location Module Webapp</name>
   
   <dependencies>
+  	<dependency>
+		<groupId>com.ihs</groupId>
+		<artifactId>location-management-api</artifactId>
+		<version>${project.parent.version}</version>
+	</dependency>
   	<dependency>
   	 	  <groupId>com.googlecode.json-simple</groupId>
     	<artifactId>json-simple</artifactId>
@@ -29,71 +34,68 @@
       <scope>test</scope>
     </dependency>
     <dependency>
-			<groupId>org.springframework</groupId>
-			<artifactId>spring-context</artifactId>
-			<version>4.2.3.RELEASE</version>
-		</dependency>
-		<!-- Spring ORM -->
-		<dependency>
-			<groupId>org.springframework</groupId>
-			<artifactId>spring-orm</artifactId>
-			<version>4.2.3.RELEASE</version>
-		</dependency>
-		<!-- Mysql Hibernate  -->
-		<!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
-		<dependency>
-		    <groupId>mysql</groupId>
-		    <artifactId>mysql-connector-java</artifactId>
-		    <version>5.1.45</version>
-		</dependency>
-		<dependency>
-			<groupId>org.hibernate</groupId>
-			<artifactId>hibernate-core</artifactId>
-			<version>4.1.6.Final</version>
-		</dependency>
-		<dependency>
-			<groupId>org.hibernate.javax.persistence</groupId>
-			<artifactId>hibernate-jpa-2.1-api</artifactId>
-			<version>1.0.0.Final</version>
-		</dependency>
-		<!-- Apache Commons DBCP -->
-		<dependency>
-			<groupId>org.apache.commons</groupId>
-			<artifactId>commons-dbcp2</artifactId>
-			<version>2.1.1</version>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework</groupId>
-			<artifactId>spring-webmvc</artifactId>
-			<version>4.2.3.RELEASE</version>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework</groupId>
-			<artifactId>spring-web</artifactId>
-			<version>4.2.3.RELEASE</version>
-		</dependency>
-		<dependency>
-			 <groupId>com.fasterxml.jackson.core</groupId>
-			 <artifactId>jackson-databind</artifactId>
-			 <version>2.5.1</version>
-		</dependency>
-		<dependency>
-			<groupId>com.ihs</groupId>
-			<artifactId>location-management-api</artifactId>
-			<version>${project.parent.version}</version>
-		</dependency>
-		<dependency>
-		    <groupId>org.codehaus.jettison</groupId>
-		    <artifactId>jettison</artifactId>
-		    <version>1.3.2</version>
-		</dependency>
-		<dependency>
-			<groupId>javax.servlet</groupId>
-			<artifactId>javax.servlet-api</artifactId>
-			<version>4.0.0</version>
-			<scope>provided</scope>
-		</dependency>
+		<groupId>org.springframework</groupId>
+		<artifactId>spring-context</artifactId>
+		<version>4.2.3.RELEASE</version>
+	</dependency>
+	<!-- Spring ORM -->
+	<dependency>
+		<groupId>org.springframework</groupId>
+		<artifactId>spring-orm</artifactId>
+		<version>4.2.3.RELEASE</version>
+	</dependency>
+	<!-- Mysql Hibernate  -->
+	<!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
+	<dependency>
+	    <groupId>mysql</groupId>
+	    <artifactId>mysql-connector-java</artifactId>
+	    <version>5.1.45</version>
+	</dependency>
+	<dependency>
+		<groupId>org.hibernate</groupId>
+		<artifactId>hibernate-core</artifactId>
+		<version>4.1.6.Final</version>
+	</dependency>
+	<dependency>
+		<groupId>org.hibernate.javax.persistence</groupId>
+		<artifactId>hibernate-jpa-2.1-api</artifactId>
+		<version>1.0.0.Final</version>
+	</dependency>
+	<!-- Apache Commons DBCP -->
+	<dependency>
+		<groupId>org.apache.commons</groupId>
+		<artifactId>commons-dbcp2</artifactId>
+		<version>2.1.1</version>
+	</dependency>
+	<dependency>
+		<groupId>org.springframework</groupId>
+		<artifactId>spring-webmvc</artifactId>
+		<version>4.2.3.RELEASE</version>
+	</dependency>
+	<dependency>
+		<groupId>org.springframework</groupId>
+		<artifactId>spring-web</artifactId>
+		<version>4.2.3.RELEASE</version>
+	</dependency>
+	<dependency>
+		 <groupId>com.fasterxml.jackson.core</groupId>
+		 <artifactId>jackson-databind</artifactId>
+		 <version>2.5.1</version>
+	</dependency>
+
+	<dependency>
+	    <groupId>org.codehaus.jettison</groupId>
+	    <artifactId>jettison</artifactId>
+	    <version>1.3.2</version>
+	</dependency>
+	<dependency>
+		<groupId>javax.servlet</groupId>
+		<artifactId>javax.servlet-api</artifactId>
+		<version>4.0.0</version>
+		<scope>provided</scope>
+	</dependency>
   </dependencies>
+  
   <build>
     <finalName>location</finalName>
   </build>
