--- a/pom.xml
+++ b/pom.xml
@@ -3,8 +3,8 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.ihs</groupId>
   <artifactId>location-management</artifactId>
-  <version>1.0.0a</version>
-  <name>location-management</name>
+  <version>2.0.0</version>
+  <name>Location Management</name>
   <packaging>pom</packaging>
   
   <modules>
@@ -12,32 +12,9 @@
     <module>location-management-web</module>
   </modules>
   
-  <build>
-		<pluginManagement>
-			<plugins>
-				<plugin>
-					<groupId>org.apache.maven.plugins</groupId>
-					<artifactId>maven-compiler-plugin</artifactId>
-					<configuration>
-						<target>1.7</target>
-						<source>1.7</source>
-					</configuration>
-				</plugin>
-				<plugin>
-					<groupId>org.apache.maven.plugins</groupId>
-					<artifactId>maven-dependency-plugin</artifactId>
-					<version>2.4</version>
-				</plugin>
-                <plugin>
-                    <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-release-plugin</artifactId>
-                    <version>2.4</version>
-                    <configuration>
-                        <autoVersionSubmodules>true</autoVersionSubmodules>
-                        <pushChanges>false</pushChanges>
-                    </configuration>
-                </plugin>
-			</plugins>
-		</pluginManagement>
-	</build>
+  <properties>
+    <maven.compiler.source>1.7</maven.compiler.source>
+    <maven.compiler.target>1.7</maven.compiler.target>
+  </properties>
+  
 </project>
