--- a/location-management-web/pom.xml
+++ b/location-management-web/pom.xml
@@ -17,11 +17,6 @@
 		<artifactId>location-management-api</artifactId>
 		<version>${project.parent.version}</version>
 	</dependency>
-  	<dependency>
-  	 	  <groupId>com.googlecode.json-simple</groupId>
-    	<artifactId>json-simple</artifactId>
-   	 	<version>1.1</version>
-	</dependency>
 	<dependency>
 		<groupId>net.sf.supercsv</groupId>
 		<artifactId>super-csv</artifactId>
@@ -33,19 +28,6 @@
       <version>3.8.1</version>
       <scope>test</scope>
     </dependency>
-    <dependency>
-		<groupId>org.springframework</groupId>
-		<artifactId>spring-context</artifactId>
-		<version>4.2.3.RELEASE</version>
-	</dependency>
-	<!-- Spring ORM -->
-	<dependency>
-		<groupId>org.springframework</groupId>
-		<artifactId>spring-orm</artifactId>
-		<version>4.2.3.RELEASE</version>
-	</dependency>
-	<!-- Mysql Hibernate  -->
-	<!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
 	<dependency>
 	    <groupId>mysql</groupId>
 	    <artifactId>mysql-connector-java</artifactId>
@@ -61,11 +43,20 @@
 		<artifactId>hibernate-jpa-2.1-api</artifactId>
 		<version>1.0.0.Final</version>
 	</dependency>
-	<!-- Apache Commons DBCP -->
 	<dependency>
 		<groupId>org.apache.commons</groupId>
 		<artifactId>commons-dbcp2</artifactId>
 		<version>2.1.1</version>
+	</dependency>
+	    <dependency>
+		<groupId>org.springframework</groupId>
+		<artifactId>spring-context</artifactId>
+		<version>4.2.3.RELEASE</version>
+	</dependency>
+	<dependency>
+		<groupId>org.springframework</groupId>
+		<artifactId>spring-orm</artifactId>
+		<version>4.2.3.RELEASE</version>
 	</dependency>
 	<dependency>
 		<groupId>org.springframework</groupId>
@@ -78,15 +69,9 @@
 		<version>4.2.3.RELEASE</version>
 	</dependency>
 	<dependency>
-		 <groupId>com.fasterxml.jackson.core</groupId>
-		 <artifactId>jackson-databind</artifactId>
-		 <version>2.5.1</version>
-	</dependency>
-
-	<dependency>
-	    <groupId>org.codehaus.jettison</groupId>
-	    <artifactId>jettison</artifactId>
-	    <version>1.3.2</version>
+	    <groupId>org.json</groupId>
+	    <artifactId>json</artifactId>
+	    <version>20180813</version>
 	</dependency>
 	<dependency>
 		<groupId>javax.servlet</groupId>
