MK: Location Tree dashboard added - REST still pending. Basic UI added.

--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
   <modules>
   	<module>location-management-api</module>
     <module>location-management-web</module>
+    <module>location-management-app</module>
   </modules>
   
   <properties>
